cmake_minimum_required(VERSION 3.19)
project(coroutine)

set(CMAKE_CXX_STANDARD 20)

# add_executable(coroutine coroutine2_boost.cpp)

# target_link_libraries(coroutine boost_context)

# add_executable(coroutine coroutine.cpp)

 
add_subdirectory(多线程读取文件)

# add_executable(coroutine main.cpp)

#add_executable(coroutine coroutine3.cpp)

# add_executable(coroutine coroutine4.cpp )

